--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "include": [
         "./scripts",
         "./test",
-        "./deploy"
+        "./deploy",
+        "./src"
     ],
     "files": [
         "./hardhat.config.ts",
