--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
         "chai-bn": "^0.3.1",
         "chai-ethers": "^0.0.1",
         "dotenv": "^16.0.0",
-        "ethers": "^5.6.4",
         "hardhat": "^2.9.3",
         "hardhat-deploy": "^0.11.4",
         "mocha-skip-if": "^0.0.3",
@@ -59,5 +58,11 @@
     },
     "mocha": {
         "timeout": 10000000
+    },
+    "dependencies": {
+        "ethers": "^5.6.9",
+        "@corpus-ventures/gashawk-common": "0.7.3",
+        "axios":"^0.27.2"
+
     }
 }
