--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@types/chai": "^4.3.1",
         "@types/mocha": "^9.1.1",
         "@types/node": "^16.11.32",
+        "@types/uuid": "^8.3.4",
         "babel-eslint": "^10.1.0",
         "chai": "^4.3.6",
         "chai-bignumber": "^3.0.0",
@@ -60,9 +61,8 @@
         "timeout": 10000000
     },
     "dependencies": {
-        "ethers": "^5.6.9",
         "@corpus-ventures/gashawk-common": "0.7.3",
-        "axios":"^0.27.2"
-
+        "axios": "^0.27.2",
+        "ethers": "^5.6.9"
     }
 }
