--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "dependencies": {
         "@corpus-ventures/gashawk-common": "0.7.3",
         "axios": "^0.27.2",
+        "dayjs": "^1.11.5",
         "ethers": "^5.6.9"
     }
 }
