--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-    "name": "gashawk.sdk",
-    "version": "1.0.0",
+    "name": "@corpus-ventures/gashawk-sdk",
+    "version": "1.0.2",
     "description": "",
     "scripts": {
         "compile": "hardhat compile",
         "test": "hardhat test",
-        "format": "prettier --check \"**/*.{ts,js,sol}\"",
-        "format:fix": "prettier --write \"**/*.{ts,js,sol}\""
+        "prepublish": "npm run tsc",
+        "tsc": "tsc -p tsconfig.json "
     },
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "files": [
-        "dist/src/",
-        "src/",
-        "LICENSE",
-        "README.md"
+        "dist"
     ],
+    "repository": "https://github.com/corpus-ventures/gashawk-sdk",
     "author": "Alex Plutta <alex@corpus.ventures>",
     "license": "MIT",
     "devDependencies": {
@@ -31,7 +31,6 @@
         "hardhat": "^2.9.3",
         "mocha-skip-if": "^0.0.3",
         "prettier": "^2.6.2",
-        "prettier-plugin-solidity": "^1.0.0-beta.19",
         "transform": "^1.1.2",
         "ts-generator": "^0.1.1",
         "ts-node": "^10.7.0",
