--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "devDependencies": {
         "@nomiclabs/hardhat-ethers": "^2.0.5",
         "@types/chai": "^4.3.1",
+        "@types/chai-as-promised": "^7.1.5",
         "@types/mocha": "^9.1.1",
         "@types/node": "^16.11.32",
         "@types/uuid": "^8.3.4",
         "babel-eslint": "^10.1.0",
         "chai": "^4.3.6",
+        "chai-as-promised": "^7.1.1",
         "chai-bignumber": "^3.0.0",
         "chai-bn": "^0.3.1",
         "chai-ethers": "^0.0.1",
