--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
         "timeout": 10000000
     },
     "dependencies": {
-        "@corpus-ventures/gashawk-common": "0.8.2",
         "axios": "^0.27.2",
         "dayjs": "^1.11.5",
-        "ethers": "^5.6.9"
+        "ethers": "^5.6.9",
+        "gashawk-common": "^0.8.2"
     }
 }
