--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@corpus-ventures/gashawk-sdk",
+    "name": "gashawk-sdk",
     "version": "1.0.11",
     "description": "",
     "scripts": {
